--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,11 @@
             "assets": [
               {
                 "glob": "**/*",
+                "input": "node_modules/monaco-editor",
+                "output": "/assets/monaco/"
+              },
+              {
+                "glob": "**/*",
                 "input": "public"
               }
             ],
@@ -84,6 +89,11 @@
             "assets": [
               {
                 "glob": "**/*",
+                "input": "node_modules/monaco-editor",
+                "output": "/assets/monaco/"
+              },
+              {
+                "glob": "**/*",
                 "input": "public"
               }
             ],
@@ -94,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "041a73e4-80b8-41f5-b506-06c868cf5811"
   }
 }
