--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "diff": "^8.0.2",
+    "monaco-editor": "^0.52.2",
+    "ngx-monaco-editor-v2": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
